--- a/TPMovies/app/src/main/res/layout/items_rv.xml
+++ b/TPMovies/app/src/main/res/layout/items_rv.xml
@@ -6,9 +6,13 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_width="175dp"
-        android:layout_height="200dp"
+        android:layout_width="210dp"
+        android:layout_height="240dp"
         android:id="@+id/Poster"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
