--- a/TPMovies/app/src/main/res/layout/upcoming_movies.xml
+++ b/TPMovies/app/src/main/res/layout/upcoming_movies.xml
@@ -27,7 +27,7 @@
 
         <Button
             android:id="@+id/upcoming_btn"
-            android:layout_width="129dp"
+            android:layout_width="120dp"
             android:layout_height="60dp"
             android:layout_gravity="right"
             android:text="Upcoming Movies"
@@ -38,17 +38,14 @@
 
     </LinearLayout>
 
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/RecyclerPoster"
+        android:id="@+id/RecyclerUpcoming"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-
-        app:layout_constraintBottom_toTopOf="@+id/LinearLayout"
+        app:layout_constraintBottom_toTopOf="@id/LinearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 
 
